Fixed axis label to avoid overlap

--- a/Implementation/css/viz3.css
+++ b/Implementation/css/viz3.css
@@ -5,7 +5,7 @@
     shape-rendering: crispEdges;
 }
 
-.axis text {
+.x-axis text {
     text-anchor: end;
 }
 
